added about and first article

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,16 +1,22 @@
 ---
-name: Tails Azimuth
+name: Carryll Chan
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
+occupation: Product & Project Manager
+company: Energy, SaaS & Sustainability
+email: carryll119@gmail.com
+twitter: ""
 linkedin: https://www.linkedin.com
 github: https://github.com
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+嗨，我是 Carryll 💁🏽‍♀️
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+過去我在能源管理領域的 B2B SaaS 公司擔任 PM，也曾在新創加速器與顧問公司推動創業專案。這些經歷讓我開始思考：「永續到底可以怎麼實踐？」
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+這個網站是我行動的起點。
+我會紀錄關於永續的觀察、實際參與的經驗，以及國內外氣候新創案例，希望從中找出對台灣更適用的方式。
+
+我相信，不需要等到準備好才開始。只要動手做，就是在推動改變。
+
+歡迎來信或留言交流!
+
