edit tags, linkedin, github link

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -5,8 +5,8 @@ occupation: Product & Project Manager
 company: Energy, SaaS & Sustainability
 email: carryll119@gmail.com
 twitter: ""
-linkedin: https://www.linkedin.com
-github: https://github.com
+linkedin: https://www.linkedin.com/in/carryll-chan-b2135712b/
+github: https://github.com/Carryll119
 ---
 
 嗨，我是 Carryll 💁🏽‍♀️
