--- a/data/blog/2025-0708-personal-start-with-action.mdx
+++ b/data/blog/2025-0708-personal-start-with-action.mdx
@@ -2,7 +2,7 @@
 title: '先行動再說：我的永續紀錄起點'
 date: '2025-07-08'
 lastmod: '2025-07-08'
-tags: ['sustainability', 'introduction', 'personal']
+tags: ['個人紀錄', '永續行動']
 draft: false
 summary: '與其想太多，不如先行動。這是我開始紀錄永續觀察與實踐的起點，也是一種學習如何讓永續變得可實作、可討論的過程。'
 images: ['/static/images/first-post.png']
