--- a/data/blog/2025-0724-climate-EU-AI-forcast.mdx
+++ b/data/blog/2025-0724-climate-EU-AI-forcast.mdx
@@ -21,17 +21,17 @@ images: ['/static/images/climate-rollback.png']
 歐洲中期天氣預報中心（ECMWF）近日推出一款劃時代的 AI 天氣預報模型，能在幾秒內預測降雨、氣溫與風速，不僅比傳統模式快上數倍，精準度也更高，而且耗能更少。這套模型不需要傳統 50 組模擬的高耗能系統，只需用已訓練好的 AI 權重就能做出即時判斷。
 對能源交易商來說，這是場革命。當風電與太陽能發電比例升高，準確預測天氣變得至關重要。這套模型提供快速且可客製化的預測結果，幫助企業將其直接整合進自己的交易演算法中。
 更重要的是，ECMWF 開放了模型權重並提供商業授權，也就是說，使用者可以「直接拿來用」，省去自訓 AI 的高昂成本。專家形容這是「營運級天氣預測的轉捩點」，預期將帶動更多創新應用。
-
 資料來源：[Bloomberg](https://www.bloomberg.com/news/newsletters/2025-07-21/europe-s-new-ai-weather-model-delivers-lightning-speed-intel-for-traders?srnd=phx-green)
----
+
 
 ## 川普政府停擺防災補助，美國20州提告
-資料來源：[NewYorkTimes](https://www.nytimes.com/2025/07/16/us/politics/trump-lawsuit-fema-disaster-funding.html)
+
 美國聯邦緊急事故管理署（FEMA）的「基礎建設韌性計畫（BRIC）」日前遭川普政府突襲喊停，引發爭議。來自紐約、加州等 20 州的政府聯合提起訴訟，指出此舉未經國會批准，違法終止一項已投入逾 45 億美元、保護數千社區的計畫。
-
 這項自 2018 年起的計畫曾幫助各地升高道路、更新排水系統、減少災害風險。根據估算，這類前置投資過去 20 年來幫納稅人省下高達 1500 億美元的重建成本。各州強調，面對日益頻繁的極端天氣，停止該計畫形同棄人民於不顧。
+資料來源：[NewYorkTimes](https://www.nytimes.com/2025/07/16/us/politics/trump-lawsuit-fema-disaster-funding.html)
 
-## 極端氣候正衝擊我們的菜價
+
+## 極端氣候正影響我們的物價
 來自巴塞隆納超級電腦中心與歐洲央行的研究指出，2022-2024 年間 16 起極端氣候事件，直接導致全球多地糧食價格暴漲。例如：
 
 - 澳洲洪災後，生菜價格暴增 300%
@@ -43,7 +43,7 @@ images: ['/static/images/climate-rollback.png']
 
 資料來源：[Bloomberg](https://www.bloomberg.com/news/articles/2025-07-20/your-food-budget-is-more-expensive-because-of-climate-change-here-s-how?sref=Oz9Q3OZU)
 
-## 中國開建全球最大水壩，印度與孟加拉警告：下游恐乾涸
+## 中國將建造全球最大水壩，印度與孟加拉警告：下游恐乾涸
 
 中國國務院總理李強宣布，在西藏雅魯藏布江下游正式動工建設全球最大水力發電工程，總投資至少 1700 億美元，預計在 2030 年代完工。
 
@@ -54,7 +54,7 @@ images: ['/static/images/climate-rollback.png']
 - NGO 指出，該區是地球最具生物多樣性的高原之一，開發可能造成無法回復的生態損害
 
 資料來源：[Reuters](https://www.reuters.com/sustainability/climate-energy/china-embarks-worlds-largest-hydropower-dam-capital-markets-cheer-2025-07-21/)
----
+
 
 ## 小結：從台灣角度看這些新聞，有什麼啟發？
 
